Hoper people page

--- a/pages/home.html
+++ b/pages/home.html
@@ -80,24 +80,24 @@
 
                                         <!--The Features Sections-->
 
-        <div class="container">
-                <div class="row">
-                    <div class="col-12 section">
-                            <h6 class="section__header1">FEATURES</h6>
-                            <h1 class="section__header2">Plan less, travel more</h1>
-                            <p class="section__paragraph">Hopper has helped 30M travelers track prices and book trips<br>
-                                 to over 200 destinations. The Hopper app will monitor prices<br> for you and you can book in just a few taps.
-                            </p>
-                    </div>
-                    <div class="col-12 mobileSection">
-                            <h6 class="mobileSection__header1">FEATURES</h6>
-                            <h1 class="mobileSection__header2">Plan less, travel more</h1>
-                            <p class="mobileSection__paragraph">Hopper predicts prices with 95% accuracy up to 1 year in advance. 
-                                No ads, no spam, no stress —  just accurate predictions and travel deals.
-                            </p>
-                    </div>
-                </div>
-        </div>
+                                        <div class="container">
+                                            <div class="row">
+                                                <div class="col-12 feature">
+                                                        <h6 class="feature__header1">FEATURES</h6>
+                                                        <h1 class="feature__header2">Plan less, travel more</h1>
+                                                        <p class="feature__paragraph">Hopper has helped 30M travelers track prices and book trips<br>
+                                                             to over 200 destinations. The Hopper app will monitor prices<br> for you and you can book in just a few taps.
+                                                        </p>
+                                                </div>
+                                                <div class="col-12 mobilefeature">
+                                                        <h6 class="mobilefeature__header1">FEATURES</h6>
+                                                        <h1 class="mobilefeature__header2">Plan less, travel more</h1>
+                                                        <p class="mobilefeature__paragraph">Hopper predicts prices with 95% accuracy up to 1 year in advance. 
+                                                            No ads, no spam, no stress —  just accurate predictions and travel deals.
+                                                        </p>
+                                                </div>
+                                            </div>
+                                    </div>
 
                                             <!--The Features Images-->
 
@@ -217,40 +217,7 @@
                        </div>
             </div>
 
-    <footer class="mobileFooter">
-    <div class="mobileFooter__section">
-        <p>Company<span class="icon2">21</span></p>
-        <img class="mobileFooter__image" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569233628/samples/figma%20homepage/fwmfx1pf0o5qzidtrqg7.png">        
-    </div>
-    <div class="mobileFooter__section1">
-        <p>People</p>
-        <img class="mobileFooter__image1" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569233628/samples/figma%20homepage/fwmfx1pf0o5qzidtrqg7.png">        
-    </div>
-    <div class="mobileFooter__section2">
-        <p>Support</p>
-        <img class="mobileFooter__image2" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569233628/samples/figma%20homepage/fwmfx1pf0o5qzidtrqg7.png">        
-    </div>
-    <div class="mobileFooter__section3">
-        <p>Insight</p>
-        <img class="mobileFooter__image3" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569233628/samples/figma%20homepage/fwmfx1pf0o5qzidtrqg7.png">        
-    </div>
-    <div class="mobileFooter__section4">
-        <select class="mobileFooter__section4--dropdown" placeholder="Select an option" name="fname">
-            <option value="Language">Language</option>
-        </select>
-    </div>
-
-    <div class="mobileFooter__section5">
-            <a href="https://facebook.com"><i class="fa fa-facebook mobileFooter__section5--icon"></i></a>
-            <a href="https://twitter.com"><i class="fa fa-twitter mobileFooter__section5--icon"></i></a>
-            <a href="https://instagram.com"><i class="fa fa-instagram mobileFooter__section5--icon"></i></a>
-            <a  href="https://linkedin.com"><i class="fa fa-linkedin mobileFooter__section5--icon"></i></a>
-            <a   href="https://youtube.com"><i class="fa fa-youtube mobileFooter__section5--icon"></i></a>  
-    </div>
-
-    <h3 class="mobileFooter__text"><u>Terms of Service</u></h3>
-
-    </footer>
+    
     <div data-include='footer'></div>
     <script type="text/javascript" src="../assets/js/jquery-3.4.1.js"></script>  
     <script src="../assets/js/main.js"></script>
