--- a/pages/people.html
+++ b/pages/people.html
@@ -332,7 +332,7 @@
                 <h1 class="txt">So what do you think?</h1>
                 <p class="txtt">We're fast-paced and fun-loving team working together to solve big problems, You'd be a great fit!</p>
                <div class="sec__nav--btn">
-                <button class="btn">See Open Courses
+                <button class="btn1">See Open Courses
                   <button  style="border-left:3px solid navy; background: rgb(1,170,229); color:#fff; width: 25px; margin-top: 25px; outline: none;border: none; height: 36px; border-radius: 0 5px 5px 0"><small class="btn--small">21</small></button></button>
                </div>
               </section>
