Hoooper people page

--- a/pages/home.html
+++ b/pages/home.html
@@ -216,9 +216,9 @@
                         </div>
                        </div>
             </div>
-
+            </div>
     
-    <div data-include='footer'></div>
+            <div data-include='footer'></div>
     <script type="text/javascript" src="../assets/js/jquery-3.4.1.js"></script>  
     <script src="../assets/js/main.js"></script>
 </body>
