--- a/pages/people.html
+++ b/pages/people.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src='../assets/js/main.js'></script>
@@ -423,12 +424,12 @@
                 <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411453/samples/figma%20people/bo4m0nojlminzc2juncr.png" alt="smilling_rabbits" class="chilling--rabbits">
               </section>
             </div>
-           </section>
-          </section>
-
-          <footer>
+</section>
+</section>
+  </div>
+  </div>
             <div data-include="footer"></div>
-          </footer>
+
     <script src=js/main.js></script>
     <script type="text/javascript" src="../assets/js/jquery-3.4.1.js"></script>  
     <script src="../assets/js/main.js"></script>
