--- a/pages/404.html
+++ b/pages/404.html
@@ -10,6 +10,9 @@
     <title>404</title>
 </head>
 <body class="body">
+    <header>
+        <div data-include="header"></div>
+    </header>
       <main class="main1">
         
                 <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412086/samples/figma%20terms%20and%20condition/eimoecntpe6nioj5rfsl.png" alt="blue_cloud" class="blue_cloud">
