--- a/pages/careerlist.html
+++ b/pages/careerlist.html
@@ -24,7 +24,7 @@
             </section>
     </header>
     <main class="main">
-        <div class="box">
+        <div class="box " id="">
             <div class="inputs">
                 <input type="search" name="search" class="search" placeholder="Search position">
                 <select name="select" class="select__Input" id="">
