better alignment of the video modal section

--- a/pages/jobsgreenhouse.html
+++ b/pages/jobsgreenhouse.html
@@ -27,7 +27,7 @@
             <div class="flex-form input">
             <label for="resume" id="label-resume" class="flex-item">Resume/CV</label>
             <div id="resume" class="flex-item">
-                    <div id="resume-first"><i class="fa  fa-paperclip" id="first-fa"> </i> <p>ATTACH RESUME/CV</p></div>
+                    <div id="resume-first"><i class="fa  fa-paperclip" id="first-fa"> </i> <p class="profile-details">ATTACH RESUME/CV</p></div>
                     <div id="resume-second"></div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
             <div class="flex-form input">
                 <label for="linkled" id="label-linkled" class="flex-item">Linkedln Profile</label>
                 <div id="linkled" class="flex-item">
-                    <div id="linkled-first"><i class=" fa fa-linkedin-square" id="first-fa"> </i> <p>APPLY WITH LINKEDIN</p></div>
+                    <div id="linkled-first"><i class=" fa fa-linkedin-square" id="first-fa"> </i> <p class="profile-details">APPLY WITH LINKEDIN</p></div>
                     <div id="linkled-second"><p>Your full Linkled profile will be shared <a href="">Learn more</a></p></div>
                 </div>
             </div>
