Hopper.com people page fixing

--- a/pages/people.html
+++ b/pages/people.html
@@ -9,6 +9,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="../assets/js/owl.carousel.min.css">
+    <link rel="stylesheet" href="../assets/js/owl.theme.default.min.css">
     <title>People</title>
 </head>
 <body class='people'>
@@ -59,7 +61,24 @@
 
     </div>
 
+    <div class="people-subnav-1">
+        <div>
+            <img class="people-subnavimg" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568412229/samples/figma%20homepage/lsqdu9pihm5dwupaxyju.png" alt="">
+        </div>
+        <ul class="people-subnav-ul">
+            <li>Faces</li>
+            <li>Why Hopper</li>
+	          <li>Values</li>
+            <li>Offices</li>
+            <li>Activities</li>
 
+            <li class="people-subnavbar-btn"><a href="#">Send app to your phone <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569847812/samples/zainabs/xf40rlu0jddvgijltrqd.png" alt="">
+            </a></li>
+        </ul>
+
+    </div>
+
+    <div class="welcome">
     <div class="container">
       <div class="row">
           <div class="col-lg-6 peopleSection">
@@ -95,6 +114,7 @@
              
               </div>
       </div>
+  </div>
   </div>
   <div class="mobileIcon">
       <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569275961/samples/figma%20people/mgjimcdcrj3rmsabfh9o.png" width="150" height="30">
@@ -484,6 +504,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="../assets/js/main.js"></script>
+    <script type="text/javascript" src="../assets/js/jquery.js"></script> 
+    <script type="text/javascript" src="../assets/js/owl.carousel.min.js"></script>
 
 </body>
 </html>
