Hopper.com Rework on the header

--- a/pages/people.html
+++ b/pages/people.html
@@ -14,7 +14,7 @@
     <title>People</title>
 </head>
 <body class='people'>
-    <div data-include='header'></div>
+    <div data-include='headerC'></div>
     <div class="footer-writeup">
         
                 <p style="margin-top:12rem;margin-left:10rem;">The people behind the bunny</p>
@@ -257,7 +257,7 @@
             </div>
     </div>
 
-    <div class="container">
+    <div class="container department">
       <div class="row department">
         <div class="col-6">
           <h1 class="department__header">Department</h1>
@@ -462,7 +462,7 @@
                 </div>
             </section>
 
-            <div class="container">
+            <div class="container thought">
               <div class="row thought">
                 <div class="col-lg-6">
                   <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411456/samples/figma%20people/gopwvjstuowicjxuljei.png" width="300">
@@ -477,7 +477,7 @@
               </div>
             </div>
 
-            <div class="container">
+            <div class="container mobilethought">
               <div class="row mobilethought">
                 <div class="col-lg-6">
                   <h1 class="mobilethought__header">We're waiting for you</h1>
