fixed careerlist header

--- a/pages/careerlist-2.html
+++ b/pages/careerlist-2.html
@@ -16,8 +16,8 @@
     <body>
 
         <header class="header1">
-                <div data-include="header-b" class="header-b" id="career-header"></div>
-                <section class="header-txt" id="header-text">
+                <div data-include="header-b" class="header-b career-header"></div>
+                <section class="header-txt header-text" id="header-text">
                     <p class="txt">We're looking for curious </p>
                     <p class="txt"> problem solver sounds familiar?</p>   
                     </section>
