--- a/pages/careerlist.html
+++ b/pages/careerlist.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="../css/main.css">
     <title>Career</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    
 </head>
 <body>
     <header class="header1">
-            <div data-include="header-b" class="header-b"></div>
-            <section class="header-txt">
+            <div data-include="header-b" class="header-b career-header"></div>
+            <section class="header-txt header-text">
                 <p class="txt">We're looking for curious </p>
                 <p class="txt"> problem solver sounds familiar?</p>   
              </section>
