--- a/pages/people.html
+++ b/pages/people.html
@@ -384,84 +384,94 @@
               </div>
 
 
-              <section class="people-2Mobile">
-                <div class="people_2a">
-                    <section class="top__nav">
-                        <h2 class="people-2Mobile__header">
-                          Activities
-                        </h2>
-                        <h5 class="people-2Mobile__paragraph">
-                          As much as we prefer to have fun, at times workdays can be stressful.  We've got these times covered, organising events, games, BBQs, ping-pong tournaments, karaoke, lunch and learns, dinners and even team trips. We all like to adventure. After all, its what we do best.
-                        </h5>
+              <section class="people-mob">
+                  <div class="people-mob--container">
+                  <p class="activities--mob">
+                    Activities
+                  </p>
+                  <p class="activities__txt--mob">
+                    As much as we prefer to have fun, at times workdays can be stressful. We've got these times covered, Organising events, games, BBQs, ping-pong tournament, karaoke, lunch and learns, dinners and team trips. We all like to adentire. After all, its what we do best.
+                  </p>
+              <section class="sec__top__nav--mob">
+                    <div class="activities">
+                      <section class="activitiess">
+                      <h4 class="activities__txt">
+                        #activities
+                      </h4>
+                      <section class="icons">
+                        <i class="fa fa-star" ></i> 
+                        <hr>
+                         <i class="fa fa-user"> <span class="user--num"> 175</span></i> 
+                        <hr>
+                       <!-- change this to the image -->
+                        <h5> Fun topic</h5>
+                      </section>
                     </section>
-  
-                    <section class="sec__top__nav">
-                      <div class="activities">
-                        <h4 class="activities__txt">
-                          #activities
-                        </h4>
-                        <section class="icons">
-                          <i class="fa fa-star" ></i> 
-                          <hr>
-                          <i class="fa fa-user"> <span class="user--num"> 201</span></i> 
-                          <hr>
-                          <h5> Funbun<sup><small>TM</small></sup></h5>
+                    </div>
+                    <div class="users__activities--mob">
+                      <section class="user--mob">
+                        <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411429/samples/figma%20people/x8fcemijnl1zkpe6ubfx.png" alt="dan-smiling">
+                        <section class="user__message--mob">
+                          <p class="user--name">
+                            Kim <span class="user--time"><small>5:26 PM</small></span>
+                          </p>
+                          <p class="user--txt">
+                            Who's down for a Mario Kart Race?
+                          </p>
                         </section>
-                      </div>
-                      <div class="users__activities">
-                        <section class="user">
-                          <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411430/samples/figma%20people/j7j0owqh4sxpkrul0sha.png" alt="dan-smiling">
-                          <section class="user__message">
-                            <p class="user--name">
-                              Dan <span class="user--time"><small>5:21 PM</small></span>
-                            </p>
-                            <p class="user--txt">
-                              Who's up for bouldering after work?
-                            </p>
-                          </section>
+                      </section>
+                      <!-- second user -->
+                      <section class="user--mob">
+                        <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411428/samples/figma%20people/riveolfuxamvf2sq3sai.png" alt="dan-smiling">
+                        <section class="user__message--mob">
+                          <p class="user--name">
+                            Fred <span class="user--time"><small>5:26 PM</small></span>
+                          </p>
+                          <p class="user--txt">
+                            My body is ready
+                          </p>
                         </section>
-  
-                        <!-- second user -->
-                        <section class="user">
-                          <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411428/samples/figma%20people/riveolfuxamvf2sq3sai.png" alt="dan-smiling">
-                          <section class="user__message">
-                            <p class="user--name">
-                              Mackenzie <span class="user--time"><small>5:22 PM</small></span>
-                            </p>
-                            <p class="user--txt">
-                              Race you to the top! 
-                            </p>
-                          </section>
+                      </section>
+                      <!-- third user -->
+                      <section class="user--mob">
+                        <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411429/samples/figma%20people/x8fcemijnl1zkpe6ubfx.png" alt="dan-smiling">
+                        <section class="user__message--mob">
+                          <p class="user--name">
+                           Joost <span class="user--time"><small> 5:26 PM</small></span>
+                          </p>
+                          <p class="user--txt">
+                       Same. But there's BBQ outside at 7, are you in?
+                          </p>
                         </section>
-                        <!-- third user -->
-                        <section class="user">
-                          <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411429/samples/figma%20people/x8fcemijnl1zkpe6ubfx.png" alt="dan-smiling">
-                          <section class="user__message">
-                            <p class="user--name">
-                              Krysi <span class="user--time"><small> 5:21 PM</small></span>
-                            </p>
-                            <p class="user--txt">
-                            There's also a BBQ outside at 7, are you guys in? 	&#128170;
-                            </p>
-                          </section>
+                      </section>
+                      <section class="user--mob">
+                        <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411428/samples/figma%20people/riveolfuxamvf2sq3sai.png" alt="dan-smiling">
+                        <section class="user__message--mob">
+                          <p class="user--name">
+                            Pk<span class="user--time"><small>5:26 PM</small></span>
+                          </p>
+                          <p class="user--txt">
+                            <!-- add ocean icon -->
+                           I'm bringing chips? Can anyon bring &#x1f37a; 
+                          </p>
                         </section>
-                        <!-- fourth user  -->
-                        <section class="user">
-                          <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411429/samples/figma%20people/rvsfxqjytza6936fqlq8.png" alt="dan-smiling">
-                          <section class="user__message">
-                            <p class="user--name">
-                              Fitz<span class="user--time"><small>5:21 PM</small></span>
-                            </p>
-                            <p class="user--txt">
-                            Wish i could make it, but I'm in Hawaii drawing burnies from the beach 	&#128048; <i class="fas fa-umbrella-beach"></i>
-                            </p>
-                          </section>
-                        </section>
-                      </div>
-                    </section>
-                </div>
-            </section>
-
+                        
+                      <!-- fourth user  -->
+                      <!-- <section class="user--mob">
+                        <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568411430/samples/figma%20people/sl3i8quea94lrev86k8r.png" alt="dan-smiling">
+                        <section class="user__message--mob">
+                          <p class="user--name">
+                            Fitz<span class="user--time"><small>5:21 PM</small></span>
+                          </p>
+                          <p class="user--txt">
+                            add ocean icon
+                           Wish i could make it, but I'm in Hawaii drawing burnies from the beach 	&#128048; <i class="fas fa-umbrella-beach"></i>
+                          </p>
+                        </section> -->
+                      </section>
+                    </div>
+             </section>
+</section>
             <div class="container">
               <div class="row thought">
                 <div class="col-lg-6">
